--- a/templates/header.html
+++ b/templates/header.html
@@ -54,9 +54,9 @@
                                                              style="padding-left: 30px" href="pemodelan_langsung">Pemodelan</a>
                     <div>
                         <ul style="padding-left: 15px">
-                            <li {% if rule=='/pemodelan_manual' %} class="active blue" {% endif %}>
-                                <a {% if rule=='/pemodelan_manual' %} class="white-text" {% endif %}
-                                                                      href="pemodelan_manual">•Per-tahapan</a>
+                            <li {% if rule=='/pemodelan_pertahap' %} class="active blue" {% endif %}>
+                                <a {% if rule=='/pemodelan_pertahap' %} class="white-text" {% endif %}
+                                                                      href="pemodelan_pertahap">•Per-tahapan</a>
                             </li>
                         </ul>
                     </div>
