--- a/templates/manual1.html
+++ b/templates/manual1.html
@@ -27,11 +27,11 @@
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-red btn-flat">Batalkan</a>
-                <a href="manual2" class="modal-close waves-effect waves-green btn-flat">Lanjutkan</a>
+                <a href="tahap2" class="modal-close waves-effect waves-green btn-flat">Lanjutkan</a>
             </div>
         </div>
         <a href="#modal1" class="btn btn-primary red modal-trigger">Pembersihan Outlier</a>
-        <a href="manual3" class="btn btn-primary blue">Transformasi Data</a>
+        <a href="tahap3" class="btn btn-primary blue">Transformasi Data</a>
     </div>
 
 
