--- a/templates/manual2.html
+++ b/templates/manual2.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col s12 ">
                 <br>
-                <a href="manual3" class="btn btn-primary green">Transformasi Data</a>
+                <a href="tahap3" class="btn btn-primary green">Transformasi Data</a>
             </div>
         </div>
 
