--- a/templates/manual3.html
+++ b/templates/manual3.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col s12 ">
                 <br>
-                <a href="manual4" class="btn btn-primary green">Penanganan Missing Value</a>
+                <a href="tahap4" class="btn btn-primary green">Penanganan Missing Value</a>
             </div>
         </div>
 
