--- a/templates/manual4.html
+++ b/templates/manual4.html
@@ -45,7 +45,7 @@
         </div>
 
         <a href="#modal1" class="btn btn-primary red modal-trigger">Tanpa Normalisasi</a>
-        <a href="manual5" class="btn btn-primary blue">Normalisasi</a>
+        <a href="tahap5" class="btn btn-primary blue">Normalisasi</a>
     </div>
 
 </main>
