--- a/templates/manual5.html
+++ b/templates/manual5.html
@@ -18,21 +18,28 @@
                 </div>
             </div>
 
-            <div class="col s12">
-                <hr>
-            </div>
             <form action="http://127.0.0.1:5000/manual6" method="POST">
+
                 <div class="row">
-                    <div class="input-field col s3">
+                    <div class="input-field col s4 seleksi_atribut">
+                        <select name="atribut">
+                            <option value="be_05" selected>Backward Elimination, α = 0.05</option>
+                            <option value="be_1">Backward Elimination, α = 0.1</option>
+                            <option value="tanpa">Tanpa Seleksi Atribut</option>
+                        </select>
+                        <label for="appet">Seleksi Atribut</label>
+                    </div>
+
+                    <div class="input-field col s4">
                         <input name="kNN" id="kNN" type="number" class="validate" min="3" step="2" max="99" value="5"
                                required>
                         <label for="kNN">Masukkan Nilai k pada kNN</label>
                         <span class="helper-text" data-error="Masukkan bilangan ganjil dimulai dari 3"
                               data-success="Rekomendasi k pada kNN: 5">Min: 3, Max: 99</span>
                     </div>
-                    <div class="col s6">
-                        <br>
-                        <input class="btn btn-primary green" type="submit" value="prediksi kNN">
+
+                    <div class="col s6 prediksi">
+                        <input class="btn btn-primary green" type="submit" value="Prediksi kNN">
                     </div>
                 </div>
             </form>
