--- a/templates/manual6.html
+++ b/templates/manual6.html
@@ -23,7 +23,7 @@
 
                 <div class="col s12">
                     <h4>Validasi</h4>
-                    <p> ({{ waktu_validasi }} s)</p>
+{#                    <p> ({{ waktu_validasi }} s)</p>#}
                     <div class="col s3">
                         <table class="centered">
                             <thead>
@@ -95,7 +95,7 @@
                     <hr>
                 </div>
             </div>
-            <a href="pemodelan_manual" class="btn btn-primary green">Kembali</a>
+            <a href="pemodelan_pertahap" class="btn btn-primary green">Kembali</a>
             <a href="simpan" class="btn btn-primary blue">Simpan Pemodelan</a>
         </div>
     </div>
